some refactoring, dependency injection